@@ -89,7 +89,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.N_MOD_GROUP_BY = 40
-CONF.N_MOD_GROUP_BY = 10
+#CONF.N_MOD_GROUP_BY = 10
 
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
@@ -103,7 +103,7 @@ CONF.HASH_OPTIMIZE = true
 CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
-CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400000
+CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 200000
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
